Fix alignment

--- a/style/mobile_main.css
+++ b/style/mobile_main.css
@@ -25,7 +25,7 @@ body{background-color:#fff; background-image:url(../images/bg.png); }
 	.facebook_logo {width: 4%; margin-top: 0%; margin-left: 0.2%;}
 
 .circle{width: 15%; margin-top: 3%; margin-bottom: 3%;} 
-.reser{margin-left: 30%; margin-top: 3%;}
+.reser{margin-left: 25%; margin-top: 3%;}
 
 .small_wave {width: 15%;}
 
